--- a/Mohejj/Mohejj/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Mohejj/Mohejj/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -7,17 +7,17 @@
 <table class='table' *ngIf="forecasts">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Temp. (C)</th>
-      <th>Temp. (F)</th>
+      <th>Name</th>
+      <th>Money forgin</th>
+      <th>Money SAR</th>
       <th>Summary</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let forecast of forecasts">
-      <td>{{ forecast.dateFormatted }}</td>
-      <td>{{ forecast.temperatureC }}</td>
-      <td>{{ forecast.temperatureF }}</td>
+      <td>{{ forecast.name }}</td>
+      <td>{{ forecast.moneyForgin }}</td>
+      <td>{{ forecast.moneySar }}</td>
       <td>{{ forecast.summary }}</td>
     </tr>
   </tbody>
